fix: Juniper: Low contrast styling on drop-down menu

--- a/lms/static/sass/shared/_header.scss
+++ b/lms/static/sass/shared/_header.scss
@@ -198,6 +198,7 @@
               
               a {
                 padding: calcRem(20);
+                color: $base-text-color;
               }
             }
           }
